# ros_bbb_training

./: README.md  host_share_internet_connection  rsync.sh  set_network_and_time  setup_bbb_as_master.bash
bbb1_talker_listener/: CMakeLists.txt  package.xml
bbb1_talker_listener/scripts/: listener.py  talker.py
bbb2_io/: blink.py  motor.py
bbb3_motor_control/: CMakeLists.txt  package.xml
bbb3_motor_control/scripts/: motor.py  planner.py  ramp_controller.py
bbb4_motor_control_params/: CMakeLists.txt  package.xml
bbb4_motor_control_params/launch/: all.launch
bbb4_motor_control_params/scripts/: motor.py  planner.py  ramp_controller.py
bbb5_motor_control_dynparam/: CMakeLists.txt  package.xml
bbb5_motor_control_dynparam/cfg/: planner.cfg
bbb5_motor_control_dynparam/launch/: all.launch
bbb5_motor_control_dynparam/scripts/: planner.py
